--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     restart: always
     links:
       - mongo
+    depends_on:
+      - mongo
   mongo:
     container_name: mongo
     image: mongo
