--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@nestjs/testing": "6.1.1",
+    "@nestjs/testing": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/hapi__joi": "^15.0.4",
     "@types/jest": "24.0.11",
@@ -53,7 +53,9 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "24.7.1",
+    "mongodb-memory-server": "^5.2.3",
     "prettier": "1.17.0",
+    "sinon": "^7.4.2",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
     "ts-node": "8.1.0",
